# repo-miner

./: .gitignore  README.md  pyproject.toml
miner/: constants.py  controller.py  display_results.py  main.py  user_inputs.py
miner/analyzers/: analyze_churn_and_predict_fixes.py  analyze_code_churn.py  churn_analyzer.py  commit_analyzer.py  file_path_analyzer.py  filter_fix_commits.py  test_debt_analyzer.py
