[tool.poetry]
name = "miner"
version = "0.1.0"
description = ""
authors = ["Jerry Tamlander"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydriller = "^2.6"
numpy = "2.0.2"
scipy = "1.13.1"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
miner = "miner.main:main"